# resume_matcher_description

./: LOCAL_SETUP.md  README.md  app.py  local_requirements.txt  models.py  pyproject.toml  replit.md  routes.py  setup.py
instance/: resume_matcher.db
static/css/: style.css
static/js/: main.js
templates/: base.html  dashboard.html  login.html  register.html  results.html  upload.html
uploads/: .gitkeep
utils/: file_processor.py  match_calculator.py  nlp_analyzer.py
